--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
+    "multer": "^1.4.2",
     "react-bootstrap": "^1.3.0"
   },
   "devDependencies": {
