--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon server.js",
     "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
-    "dev": "concurrently \"npm run start\" \" npm run client \" "
+    "dev": "concurrently \"npm run start\" \" npm run client \" ",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
     "multer": "^1.4.2",
+    "path": "^0.12.7",
     "react-bootstrap": "^1.3.0"
   },
   "devDependencies": {
